# Indie-Studio

./: CMakeLists.txt  README.md
Doc/: Doxyfile  DoxygenMainpage.h
cmake/: libraylib.so.3.7.1
conf/: help1.conf
include/Bomberman/: Bomberman.hpp
include/Engine/: AllComponentManagers.hpp  AllEntities.hpp  AllSystems.hpp
include/Engine/Button/: IButton.hpp  SpriteButton.hpp
include/Engine/Component/: Collision.hpp  IComponent.hpp  Joystick.hpp  Position.hpp  RenderModel.hpp  Script.hpp
include/Engine/ComponentManager/: JoystickManager.hpp  MotionManager.hpp  RenderModelManager.hpp  ScriptManager.hpp  WriteManager.hpp
include/Engine/Core/: Core.hpp
include/Engine/Entity/: Alien.hpp  Grenade.hpp  Player.hpp  Word.hpp
include/Raylib/: RayImage.hpp  RayMesh.hpp  RayModel.hpp  RayRectangle.hpp  Raysound.hpp  Texture.hpp  Window.hpp  myRaylib.hpp  raylib.hpp
src/: main.cpp
src/Bomberman/: BattlePlayerPresentationScene.cpp  BattleScene.cpp  ChooseGameModeScene.cpp  ChooseMapBattleScene.cpp  ChooseMapScene.cpp  CloseScene.cpp  CreateMap.cpp  DuoGameScene.cpp  ExitScene.cpp  FullscreenOffScene.cpp  FullscreenOnScene.cpp  HelpScene.cpp  MainScene.cpp  MusicOffScene.cpp  MusicOnScene.cpp  PauseScene.cpp  PlayerPresentationScene.cpp  SettingsScene.cpp  SoloGameScene.cpp  StartScene.cpp  setMapName.cpp  tools.cpp
src/Bomberman/Map/: calm.txt  (+9 more)
src/Engine/: AllComponents.hpp  Engine.hpp
src/Raylib/: Function.cpp  MusicStream.cpp  MusicStream.hpp  RayImage.cpp  RayMesh.cpp  RayModel.cpp  RayRectangle.cpp  Raysound.cpp  Text.cpp  Text.hpp  Texture.cpp  Window.cpp
(+63 files in other folders)
